# currychicken

./: .gitignore  README.md  lhs  texmakefile  unhaddock
Gear/: CommonFormatting.hs  Gear.lhs  Gear.xabal  Midi.hs  MyMusic.hs  Plot.hs  Rhythm.hs  Tracks.hs  frp-core-functions.txt  makefile  playChords.lhs  redir.hs  render.lhs  texFromLhs.hs  traverse.hs  verbatim.ghci
Insite/: .#Insite.cabal  .gitignore  Des.hs  Des.lhs  Event.hs  Handler.lhs  Insite.cabal  Insite.lhs  Logger.dot  Logger.hs  Logger.lhs  Simulation.hs  Time.lhs  attic.hs  des-example.hs  example  example.hs  example.ps  makefile  new-logger.hs  unhaddock.pl  xxxDes.lhs  xxxHandler.lhs  xxxInsite.lhs  xxxLogger.lhs  xxxTime.lhs
Insite/Domain/: Item.hs  Location.hs  Port.hs  Process.hs  System.hs
Insite/Logistics/: .#Domain.hs  Domain.hs  Query.hs
Insite/Misc/: Lens.hs  Time.hs
Insite/attic/: LoggerApplicative.hs  attic.hs
continuations/: MonadsInSlowMo.lhs  concurrencyContinuations.lhs  makefile  theIOType.txt
control/: DES.hs  control.lhs  control1.lhs  graphCollapse.hs  system.lhs  xxx.hs
doko/: doko.hs
gear/: ChangeLog.md  LICENSE  gear.cabal
misc/: parseOracleLogs.hs
modularSim/: makefile  modularSimulation.lhs  modularSimulation0.dot  modularSimulation0.eps  modularSimulation1.dot  modularSimulation1.eps  modularSimulation2.dot  modularSimulation2.eps  modularSimulation3.dot  modularSimulation3.eps  modularSimulation4.dot  modularSimulation4.eps
opal/: Aggregate.hs  Distribution.lhs  Path.hs  Poset.hs  ProductDisambiguation.lhs  Products.lhs  ProductsCombine.dot  SetLike.hs  (+32 more)
(+94 files in other folders)
