Name:                insite
Version:             0.1

Category:            Simulation
Synopsis:            Simulation of a logistic network
Description:         

License:             BSD3
License-File:        LICENSE
Copyright:           (c) 2015 Martin Drautzburg
Author:              Martin Drautzburg
Maintainer:          Martin Drautzburg

Build-Type:          Simple
Cabal-Version:       >= 1.10
Tested-With:         GHC == 7.8.3
Extra-Source-Files:  changes

Source-Repository head
  Type: git
  Location: git://github.com/3of8/heap.git

Flag Test
  Description:       Build a binary running test cases
  Default:           False
  

Library
  Build-Depends:     base >= 3 && < 5,
                     heap ,
                     mtl,
                     containers
  Exposed-Modules:
        Simulation
        Event
        Domain.Location
        Domain.Port
        Domain.Item
        Domain.Process
        Domain.System
        Misc.Lens
        Misc.Time

  Other-Modules:
  GHC-Options:       -Wall -fwarn-tabs
  Other-Extensions:
  Default-Language:    Haskell2010

-- Executable heap-tests
--  if !flag( Test )
--    Buildable:       False
--  Main-Is:
--  Other-Modules:
--  Build-Depends:     base >= 3 && < 5, QuickCheck >= 2.3 && < 3
--  CPP-Options:       -D__TEST__
--  GHC-Options:       -Wall -fwarn-tabs -fno-ignore-asserts
--   Default-Language:  Haskell2010